--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -52,7 +52,7 @@
 		                        <li><a href="{% url 'shop:index' %}">Shop for school Items</a></li>
 			                    <li><a href="">About</a></li>
                                 <li><a href="">Check Result</a></li>
-                                <li><a href="">Pay School Fees</a></li>
+                                <li><a href="{% url 'students:make_payment' %}">Pay School Fees</a></li>
                                 <li><a href="{% url 'logout' %}">Logout</a></li>
 			                  {% elif user.is_authenticated and user.is_staff %}
 			                    <p> Welcome: <strong>{{user.username}}</strong>
