--- a/templates/students/payment.html
+++ b/templates/students/payment.html
@@ -1,18 +1,28 @@
 {% load paystack %}
-<form>
+<form >
   <script src="https://js.paystack.co/v1/inline.js"></script>
-  <button type='button' onclick="makePayment()">Make Payment</button>
+  <button type="button" onclick="payWithPaystack()"> Pay </button> 
 </form>
-
+ 
 <script>
-  function makePayment(){
-      var handler = PaystackPop.setup({
-          key: 'pk_test_ddd702e1b555af1548a67208299d4c25c8d8c25b'
-          email: '{{email}}',
-          amount: 80000,
-          currency: 'NGN'
-          ref : ''+ Math.floor((Math.random() * 1000000000 ) + 1),
-      })
+  function payWithPaystack(){
+    var handler = PaystackPop.setup({
+      key: 'pk_test_ddd702e1b555af1548a67208299d4c25c8d8c25b',
+      email: '{{email}}',
+      amount: 8000000,
+      currency: 'NGN',
+      currency: "NGN",
+      ref: ''+Math.floor((Math.random() * 1000000000) + 1),
+      callback: function(response){
+          alert('success. transaction ref is ' + response.reference);
+      },
+      onClose: function(){
+          alert('window closed');
+      }
+    });
+    handler.openIframe();
   }
-
+  window.onload = payWithPaystack()
 </script>
+
+
