--- a/templates/staffs/staff_index.html
+++ b/templates/staffs/staff_index.html
@@ -3,12 +3,10 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      {% if home_work %}
+      {% if subjects %}
         <ul>
-          {% for assignment in home_work %}
-            <li>
-              {{assignment.title}} <br> {{assignment.assignment_date}}
-            </li>
+          {% for subject in subjects %}
+            <li>{{subject.name}} <br> </li>
           {% endfor %}
         </ul>
       {% else %}
